// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Article /> match snapshot default 1`] = `
<div
  className="ContentContainer-sc-1f0ayl8-0 cfjAmd"
>
  <div
    className="Title-sc-1f0ayl8-1 dwzDBp"
  />
  <img
    className="Image-sc-1f0ayl8-2 ilsyit"
  />
  <div
    className="Content-sc-1f0ayl8-3 fnPcPG"
  />
  <div
    className="Back-sc-1f0ayl8-4 ehdbsJ"
    onClick={[Function]}
  >
    <div
      className="BackIcon-sc-1f0ayl8-6 bFZjGm"
    />
    <div
      className="BackText-sc-1f0ayl8-5 ffQJYe"
    >
      BACK_TO_LIST
    </div>
  </div>
</div>
`;

exports[`<Article /> match snapshot default 2`] = `
<div
  className="ContentContainer-sc-1f0ayl8-0 cfjAmd"
>
  <div
    className="Title-sc-1f0ayl8-1 dwzDBp"
  >
    Chelsea v Manchester United: Premier League – live! - The Guardian
  </div>
  <img
    className="Image-sc-1f0ayl8-2 ilsyit"
    src="https://i.guim.co.uk/img/media/950bc1560ac0f7a441e45456369b4604eddbd906/0_0_3624_2174/master/3624.jpg?width=1200&height=630&quality=85&auto=format&fit=crop&overlay-align=bottom%2Cleft&overlay-width=100p&overlay-base64=L2ltZy9zdGF0aWMvb3ZlcmxheXMvdGctbGl2ZS5wbmc&enable=upscale&s=33fbcf85ba2d0978f6b272bdbf1ebd57"
  />
  <div
    className="Content-sc-1f0ayl8-3 fnPcPG"
  />
  <div
    className="Back-sc-1f0ayl8-4 ehdbsJ"
    onClick={[Function]}
  >
    <div
      className="BackIcon-sc-1f0ayl8-6 bFZjGm"
    />
    <div
      className="BackText-sc-1f0ayl8-5 ffQJYe"
    >
      BACK_TO_LIST
    </div>
  </div>
</div>
`;
